--- a/src/com/github/dougkelly88/FLIMPlateReaderGUI/GeneralGUIComponents/HCAFLIMPluginFrame.form
+++ b/src/com/github/dougkelly88/FLIMPlateReaderGUI/GeneralGUIComponents/HCAFLIMPluginFrame.form
@@ -152,7 +152,11 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="frameScrollPane" min="-2" pref="1351" max="-2" attributes="0"/>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace max="32767" attributes="0"/>
+              <Component id="frameScrollPane" min="-2" pref="1351" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -261,33 +265,33 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                          <Group type="103" groupAlignment="1" attributes="0">
                               <Component id="progressBarPanel" max="32767" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Group type="102" attributes="0">
-                                      <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="currentBasePathField" min="-2" pref="542" max="-2" attributes="0"/>
-                                  </Group>
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
-                                      <Component id="seqOrderBasePanel" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
-                                      <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                                          <Component id="snapFLIMButton" alignment="0" max="32767" attributes="0"/>
-                                          <Component id="snapBFButton" alignment="0" max="32767" attributes="0"/>
-                                          <Component id="startSequenceButton" max="32767" attributes="0"/>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Group type="103" groupAlignment="1" attributes="0">
+                                      <Group type="102" alignment="0" attributes="0">
+                                          <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                                          <EmptySpace max="-2" attributes="0"/>
+                                          <Component id="currentBasePathField" min="-2" pref="542" max="-2" attributes="0"/>
                                       </Group>
-                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                          <Group type="102" attributes="0">
-                                              <EmptySpace max="-2" attributes="0"/>
-                                              <Component id="stopSequenceButton" max="32767" attributes="0"/>
+                                      <Group type="102" alignment="0" attributes="0">
+                                          <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
+                                          <Component id="seqOrderBasePanel" min="-2" max="-2" attributes="0"/>
+                                          <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
+                                          <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                              <Component id="snapFLIMButton" alignment="0" max="32767" attributes="0"/>
+                                              <Component id="snapBFButton" alignment="0" max="32767" attributes="0"/>
+                                              <Component id="startSequenceButton" max="32767" attributes="0"/>
                                           </Group>
-                                          <Group type="102" alignment="0" attributes="0">
-                                              <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
-                                              <Group type="103" groupAlignment="0" attributes="0">
-                                                  <Component id="experimentNameText" min="-2" max="-2" attributes="0"/>
+                                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                              <Group type="102" attributes="0">
+                                                  <EmptySpace max="-2" attributes="0"/>
+                                                  <Component id="stopSequenceButton" max="32767" attributes="0"/>
+                                              </Group>
+                                              <Group type="102" alignment="0" attributes="0">
+                                                  <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
                                                   <Group type="103" groupAlignment="0" attributes="0">
+                                                      <Component id="experimentNameText" min="-2" max="-2" attributes="0"/>
                                                       <Component id="experimentNameField" max="32767" attributes="0"/>
                                                       <Group type="102" attributes="0">
                                                           <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
@@ -297,11 +301,18 @@
                                                   </Group>
                                               </Group>
                                           </Group>
+                                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                          <Group type="103" groupAlignment="0" attributes="0">
+                                              <Component id="TEST" min="-2" max="-2" attributes="0"/>
+                                              <Component id="TEST1" min="-2" max="-2" attributes="0"/>
+                                              <Component id="TEST2" min="-2" max="-2" attributes="0"/>
+                                          </Group>
                                       </Group>
                                   </Group>
+                                  <EmptySpace min="0" pref="11" max="32767" attributes="0"/>
                               </Group>
                           </Group>
-                          <EmptySpace pref="23" max="32767" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -316,17 +327,22 @@
                                   <Group type="103" groupAlignment="3" attributes="0">
                                       <Component id="snapFLIMButton" alignment="3" min="-2" max="-2" attributes="0"/>
                                       <Component id="experimentNameField" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="TEST" alignment="3" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="3" attributes="0">
                                       <Component id="snapBFButton" alignment="3" min="-2" max="-2" attributes="0"/>
                                       <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
                                       <Component id="accFramesField" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="TEST1" alignment="3" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="3" attributes="0">
-                                      <Component id="startSequenceButton" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="stopSequenceButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Group type="103" groupAlignment="3" attributes="0">
+                                          <Component id="startSequenceButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                                          <Component id="stopSequenceButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      </Group>
+                                      <Component id="TEST2" alignment="1" min="-2" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                               <Component id="seqOrderBasePanel" min="-2" max="-2" attributes="0"/>
@@ -445,6 +461,24 @@
                 <Component class="javax.swing.JLabel" name="experimentNameText">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Name experiment"/>
+                  </Properties>
+                </Component>
+                <Component class="javax.swing.JButton" name="TEST">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="jButton1"/>
+                  </Properties>
+                </Component>
+                <Component class="javax.swing.JTextField" name="TEST1">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="jTextField1"/>
+                  </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="TEST1ActionPerformed"/>
+                  </Events>
+                </Component>
+                <Component class="javax.swing.JTextField" name="TEST2">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="jTextField2"/>
                   </Properties>
                 </Component>
               </SubComponents>
